| Bug #37225 | ndbd and ndb_mgmd pid file not removed after shutdown | ||
|---|---|---|---|
| Submitted: | 5 Jun 2008 14:39 | Modified: | 13 Apr 2009 16:07 |
| Reporter: | Geert Vanderkelen | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1.24-ndb-6.3.15 | OS: | Any |
| Assigned to: | jack andrews | CPU Architecture: | Any |
| Tags: | cluster | ||
[5 Jun 2008 14:39]
Geert Vanderkelen
[26 Feb 2009 12:06]
jack andrews
to be fixed with my_daemon code
[19 Mar 2009 5:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/69676 2861 jack andrews 2009-03-19 bug#37225 ndbd and ndb_mgmd pid file not removed after shutdown
[19 Mar 2009 7:55]
Magnus BlÄudd
Review mail sent as reply to commit mail, a few comments.
[25 Mar 2009 9:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70320 2861 jack andrews 2009-03-25 bug#37225 ndbd and ndb_mgmd pid file not removed after shutdown
[1 Apr 2009 11:01]
Bugs System
Pushed into 5.1.32-ndb-7.0.5 (revid:jack@sun.com-20090401104309-3ywt3htkjxd4evef) (version source revid:jack@sun.com-20090325091847-99j6qm6tvi2zlecr) (merge vers: 5.1.32-ndb-7.0.4) (pib:6)
[13 Apr 2009 16:07]
Jon Stephens
Documented in the NDB-7.0.5 changelog as follows:
PID files for the data and management node daemons were not removed
following a normal shutdown.
