bug#37225 ndbd and ndb_mgmd pid file not removed after shutdown